; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/models/extr_esp_ble_mesh_generic_model_api.c_esp_ble_mesh_register_generic_client_callback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/api/models/extr_esp_ble_mesh_generic_model_api.c_esp_ble_mesh_register_generic_client_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_BLE_HOST_STATUS_ENABLED = common dso_local global i32 0, align 4
@BTC_PID_GENERIC_CLIENT = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@ESP_FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_ble_mesh_register_generic_client_callback(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @ESP_BLE_HOST_STATUS_ENABLED, align 4
  %4 = call i32 @ESP_BLE_HOST_STATUS_CHECK(i32 %3)
  %5 = load i32, i32* @BTC_PID_GENERIC_CLIENT, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @btc_profile_cb_set(i32 %5, i32 %6)
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @ESP_OK, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @ESP_FAIL, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  ret i32 %14
}

declare dso_local i32 @ESP_BLE_HOST_STATUS_CHECK(i32) #1

declare dso_local i64 @btc_profile_cb_set(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
